# easyAI

./: .buildinfo  .bumpversion.cfg  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.rst  ai_descriptions.html  ai_unittests.py  crash_course.html  genindex.html  get_started.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quick_example.html  ref.html  release-please-config.json  search.html  searchindex.js  setup.py  speedup.html
.github/workflows/: publish.yml  push-to-pypi.yml  release-please.yml  tests.yml  version-bump-and-release.yml  version-bump.yml
_modules/: easyAI.html  index.html
_modules/easyAI/: AI.html  Player.html  TwoPlayersGame.html
_sources/: crash_course.rst.txt  get_started.rst.txt  get_started.txt  index.rst.txt  index.txt  installation.rst.txt  quick_example.txt  ref.txt
_sources/examples/: examples.rst.txt  examples.txt  games.txt  integrate.rst.txt  quick_example.rst.txt  quick_example.txt  speedup.rst.txt  speedup.txt
_static/: easyAI.css  flasky.css
docs/: Makefile  make.bat
docs/source/: ai_descriptions.rst  conf.py  crash_course.rst  get_started.rst  index.rst  ref.rst  speedup.rst
easyAI/: Player.py  README.md  TwoPlayerGame.py  TwoPlayersGame.py  TwoTeamsGame.py  __init__.py  two_teams_game_sandbox.py
easyAI/AI/: DUAL.py  DictTT.py  DictTranspositionTable.py  HashTT.py  HashTranspositionTable.py  Hashes.py  MCTS.py  (+11 more)
examples/: examples.html  game_solving.html  games.html  integrate.html  quick_example.html  speedup.html
tests/: test_basics.py  test_negamax.py
(+27 files in other folders)
